--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ li a {
       rgba(90, 167, 199),
       rgba(0, 0, 0, 0.5)
     ),
-    url("/images/background-image.jpg");
+    url("images/background-image.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
